objects/FLODocs__FLO_Process_Issue__c.object
<CustomObject>
    <description>Used to track process issues.</description>
    <fields>
        <fullName>FLODocs__Active__c</fullName>
        <defaultValue>true</defaultValue>
        <description>Active indicator of the FLO Process Issue Record</description>
        <inlineHelpText>Active indicator of the FLO Process Issue Record</inlineHelpText>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>FLODocs__Approval_Status__c</fullName>
        <description>This is the approval status of the process issue.</description>
        <inlineHelpText>This is the approval status of the process issue.  Approval is not always required depending on policy of your company.</inlineHelpText>
        <label>Approval Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>FLODocs__Approval_Status</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>FLODocs__Approver__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>This is the person assigned to approve the process issue. By default, it is the issue owner&apos;s supervisor.</description>
        <inlineHelpText>This is the person assigned to approve the process issue. By default, it is the issue owner&apos;s supervisor.</inlineHelpText>
        <label>Approver</label>
        <referenceTo>User</referenceTo>
        <relationshipName>FLO_Process_Issues</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>FLODocs__Assigned__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Select this field to automatically assign this issue to an user to resolve. A task will automatically be generated.</description>
        <inlineHelpText>Select this field to automatically assign this issue to an user to resolve. A task will automatically be generated.</inlineHelpText>
        <label>Assigned</label>
        <referenceTo>User</referenceTo>
        <relationshipName>FLO_Process_Issues1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>FLODocs__Change_Level__c</fullName>
        <label>Change Level</label>
        <length>131072</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>FLODocs__Control_Count__c</fullName>
        <description>This is the number of records represented by this issue.</description>
        <inlineHelpText>This is the number of records represented by this issue.</inlineHelpText>
        <label>Control Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>FLODocs__Control_Internal_Id__c</fullName>
        <formula>1</formula>
        <label>Control Internal Id</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>FLODocs__Control__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>This is the control that resolved the material risk or generated the issue log.  When this field is set:
1.  the process is updated to set the control as a customization,
2.  the customization field on the process issue is set 
and
3.  the customization is updated to identify the process as the controlled process.</description>
        <inlineHelpText>This is the control that resolved the material risk or generated the issue log.  (see description for details)</inlineHelpText>
        <label>Control</label>
        <referenceTo>FLODocs__FLO_Customization__c</referenceTo>
        <relationshipName>FLO_Process_Issues1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>FLODocs__Customizations__c</fullName>
        <description>These are the customizations related to the issue.</description>
        <inlineHelpText>These are the customizations related to the issue.</inlineHelpText>
        <label>Customization(s)</label>
        <length>131000</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>FLODocs__Effort_Required__c</fullName>
        <description>This is the amount of time required to implement a requirement or fix an issue.</description>
        <inlineHelpText>This is the amount of time required to implement a requirement or fix an issue.</inlineHelpText>
        <label>Effort Required</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>FLODocs__Error_Count__c</fullName>
        <description>The number of times that the script error has been detected</description>
        <inlineHelpText>The number of times that the script error has been detected</inlineHelpText>
        <label>Error Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>FLODocs__External_Ticket_Link__c</fullName>
        <description>This is the link to the external ticket corresponding to this process issue.</description>
        <inlineHelpText>This is the link to the external ticket corresponding to this process issue.</inlineHelpText>
        <label>External Ticket Link</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>FLODocs__External_Ticket_Number__c</fullName>
        <description>This is the ticket corresponding to this process issue in an external system.</description>
        <inlineHelpText>This is the ticket corresponding to this process issue in an external system.</inlineHelpText>
        <label>External Ticket Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FLODocs__Issue_Description__c</fullName>
        <description>The description of the process issue.</description>
        <inlineHelpText>The description of the process issue.</inlineHelpText>
        <label>Issue Description</label>
        <length>20000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>FLODocs__Originating_URL__c</fullName>
        <description>This is the URL that the issue was logged from</description>
        <inlineHelpText>This is the URL that the issue was logged from</inlineHelpText>
        <label>Originating URL</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>FLODocs__Parent_Change_Request__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>This is the change request that this issue was created from or is attached to.  It is filled in when a process issue is created to identify something that needs to be resolved or investigated or when a process issue is attached to a change request. Originating process issues (ie those that are converted into change requests) are tracked in the Originating Change Request field.</description>
        <inlineHelpText>This is the change request associated with the issue.</inlineHelpText>
        <label>Parent Change Request</label>
        <referenceTo>FLODocs__FLO_Change_Request__c</referenceTo>
        <relationshipName>FLO_Process_Issues</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>FLODocs__Parent_Issue__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>This is the parent issue - used to group issues that are the same type of issue.</description>
        <inlineHelpText>Use this field to group issues together</inlineHelpText>
        <label>Parent Issue</label>
        <referenceTo>FLODocs__FLO_Process_Issue__c</referenceTo>
        <relationshipName>FLO_Process_Issues</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>FLODocs__Process__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>This is the process this issue relates to.</description>
        <inlineHelpText>This is the process that this issue is assigned to.</inlineHelpText>
        <label>Process</label>
        <referenceTo>FLODocs__FLO_Process__c</referenceTo>
        <relationshipName>FLO_Process_Issues</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>FLODocs__Related_Test__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>This is a test record that the process issue originated from.   Used to track issues that arise during testing.</description>
        <inlineHelpText>This is a test record that the process issue originated from.   Used to track issues that arise during testing.</inlineHelpText>
        <label>Related Test</label>
        <referenceTo>FLODocs__FLO_Test_Record__c</referenceTo>
        <relationshipName>FLO_Process_Issues</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>FLODocs__Request_Process_Help__c</fullName>
        <description>This field can be used to direct process issues to an external resource such as the customer&apos;s service provider. The search should be an alert triggered by a change in this field where the result does not equal the default value.</description>
        <inlineHelpText>Completing this field sends a message to FLO or your Salesforce consultant detailing the issue and providing them with access to your relevant process record.</inlineHelpText>
        <label>Request Process Help</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>FLODocs__Search_Customization__c</fullName>
        <description>Hidden</description>
        <inlineHelpText>Hidden</inlineHelpText>
        <label>Search Customization</label>
        <length>131072</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>FLODocs__Severity__c</fullName>
        <label>Severity</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Low Importance</fullName>
                </value>
                <value>
                    <fullName>Medium Importance</fullName>
                </value>
                <value>
                    <fullName>Urgent Issue</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>FLODocs__Status__c</fullName>
        <description>This is the status of the issue.</description>
        <inlineHelpText>This is the status of the issue.</inlineHelpText>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>FLODocs__FLO_Process_Issue_Status</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>FLODocs__Target_Resolution_Date__c</fullName>
        <description>This is the date by which the company plans to resolve the issue.</description>
        <inlineHelpText>This is the date on which the issue is expected to be addressed.</inlineHelpText>
        <label>Target Resolution Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>FLODocs__Test__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>This is a test report associated with this issue.  Used to track open issues relating to a test.</description>
        <inlineHelpText>This is a test report associated with this issue.  Used to track open issues relating to a test.</inlineHelpText>
        <label>Test</label>
        <referenceTo>FLODocs__FLO_Test_Record__c</referenceTo>
        <relationshipName>FLO_Process_Issues1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>FLODocs__Type__c</fullName>
        <description>This is the type of process issue.</description>
        <inlineHelpText>This field tracks the type and severity of the issue.  These types can be used to trigger alerts to relevant managers and object owners.</inlineHelpText>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>FLODocs__FLO_Process_Issue_Severity</valueSetName>
        </valueSet>
    </fields>
    <label>Process Issue</label>
    <listViews>
        <fullName>FLODocs__All</fullName>
        <columns>NAME</columns>
        <columns>FLODocs__Active__c</columns>
        <columns>FLODocs__Approval_Status__c</columns>
        <columns>FLODocs__Approver__c</columns>
        <columns>FLODocs__Assigned__c</columns>
        <columns>FLODocs__Change_Level__c</columns>
        <columns>FLODocs__Control__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>FLODocs__Open_Process_Issues_2</fullName>
        <columns>NAME</columns>
        <columns>CREATED_DATE</columns>
        <columns>FLODocs__Customizations__c</columns>
        <columns>FLODocs__Change_Level__c</columns>
        <columns>FLODocs__Effort_Required__c</columns>
        <columns>FLODocs__Status__c</columns>
        <columns>FLODocs__Issue_Description__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>FLODocs__Status__c</field>
            <operation>notEqual</operation>
            <value>Closed</value>
        </filters>
        <label>Open Process Issues (v2)</label>
    </listViews>
    <listViews>
        <fullName>FLODocs__Open_Process_Issues_no_Script_Error_2</fullName>
        <columns>NAME</columns>
        <columns>FLODocs__Process__c</columns>
        <columns>FLODocs__Issue_Description__c</columns>
        <columns>FLODocs__Type__c</columns>
        <columns>FLODocs__Status__c</columns>
        <columns>FLODocs__Parent_Change_Request__c</columns>
        <columns>OWNER.ALIAS</columns>
        <columns>FLODocs__Assigned__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>FLODocs__Status__c</field>
            <operation>notEqual</operation>
            <value>Completed As Process Issue</value>
        </filters>
        <filters>
            <field>FLODocs__Type__c</field>
            <operation>notEqual</operation>
            <value>Script Error</value>
        </filters>
        <filters>
            <field>OWNER.ALIAS</field>
            <operation>equals</operation>
            <value>all</value>
        </filters>
        <filters>
            <field>FLODocs__Assigned__c</field>
            <operation>equals</operation>
            <value>all</value>
        </filters>
        <label>Open Process Issues-No Script Error (v2)</label>
    </listViews>
    <listViews>
        <fullName>FLODocs__Process_Control_Overview_2</fullName>
        <columns>NAME</columns>
        <columns>FLODocs__Issue_Description__c</columns>
        <columns>FLODocs__Control__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>FLODocs__Active__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>FLODocs__Status__c</field>
            <operation>notEqual</operation>
            <value>Completed As Process Issue</value>
        </filters>
        <filters>
            <field>FLODocs__Type__c</field>
            <operation>equals</operation>
            <value>Control Log</value>
        </filters>
        <label>Process Control Overview (v2)</label>
    </listViews>
    <listViews>
        <fullName>FLODocs__Process_Issue_Overview_2</fullName>
        <columns>NAME</columns>
        <columns>FLODocs__Process__c</columns>
        <columns>FLODocs__Type__c</columns>
        <columns>FLODocs__Issue_Description__c</columns>
        <columns>FLODocs__Status__c</columns>
        <columns>FLODocs__Target_Resolution_Date__c</columns>
        <columns>FLODocs__Parent_Change_Request__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>FLODocs__Active__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>FLODocs__Status__c</field>
            <operation>notEqual</operation>
            <value>Completed As Process Issue</value>
        </filters>
        <label>Process Issue Overview (v2)</label>
    </listViews>
    <listViews>
        <fullName>FLODocs__Process_Issues_Alerts_2</fullName>
        <columns>NAME</columns>
        <columns>FLODocs__Process__c</columns>
        <columns>FLODocs__Assigned__c</columns>
        <columns>FLODocs__Issue_Description__c</columns>
        <columns>FLODocs__Status__c</columns>
        <columns>FLODocs__Parent_Change_Request__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>FLODocs__Type__c</field>
            <operation>equals</operation>
            <value>Urgent Issue,Broken Process,Control Log,Script Error</value>
        </filters>
        <filters>
            <field>FLODocs__Status__c</field>
            <operation>notEqual</operation>
            <value>Completed As Process Issue</value>
        </filters>
        <label>Process Issues Alerts (v2)</label>
    </listViews>
    <listViews>
        <fullName>FLODocs__Resolved_Process_Issues_2</fullName>
        <columns>NAME</columns>
        <columns>FLODocs__Process__c</columns>
        <columns>FLODocs__Issue_Description__c</columns>
        <columns>FLODocs__Type__c</columns>
        <columns>FLODocs__Status__c</columns>
        <columns>FLODocs__Parent_Change_Request__c</columns>
        <columns>OWNER.ALIAS</columns>
        <columns>FLODocs__Assigned__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>FLODocs__Status__c</field>
            <operation>equals</operation>
            <value>Completed As Process Issue</value>
        </filters>
        <label>Resolved Process Issues (v2)</label>
    </listViews>
    <listViews>
        <fullName>FLODocs__Unresolved_Material_Risks_2</fullName>
        <columns>FLODocs__Process__c</columns>
        <columns>NAME</columns>
        <columns>FLODocs__Type__c</columns>
        <columns>FLODocs__Issue_Description__c</columns>
        <columns>FLODocs__Control__c</columns>
        <columns>FLODocs__Status__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>FLODocs__Type__c</field>
            <operation>equals</operation>
            <value>Material Risk</value>
        </filters>
        <filters>
            <field>FLODocs__Status__c</field>
            <operation>notEqual</operation>
            <value>Completed As Process Issue,Converted to Change Request,Closed</value>
        </filters>
        <filters>
            <field>FLODocs__Active__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>Unresolved Material Risks (v2)</label>
    </listViews>
    <listViews>
        <fullName>FLODocs__Unresolved_Script_Errors_2</fullName>
        <columns>NAME</columns>
        <columns>FLODocs__Process__c</columns>
        <columns>FLODocs__Issue_Description__c</columns>
        <columns>FLODocs__Type__c</columns>
        <columns>FLODocs__Status__c</columns>
        <columns>FLODocs__Parent_Change_Request__c</columns>
        <columns>OWNER.ALIAS</columns>
        <columns>FLODocs__Assigned__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>FLODocs__Type__c</field>
            <operation>equals</operation>
            <value>Script Error</value>
        </filters>
        <filters>
            <field>FLODocs__Status__c</field>
            <operation>notEqual</operation>
            <value>Completed As Process Issue,Converted to Change Request,Closed</value>
        </filters>
        <label>Unresolved Script Errors (v2)</label>
    </listViews>
    <nameField>
        <label>Process Issue Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Process Issues</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>